[project]
name = "qtstrap"
version = "0.6.4"
description = "Like Bootstrap, but qt-er."
readme = "README.md"
authors = [{ name = "David Kincaid", email = "daelonsuzuka@gmail.com" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Widget Sets",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.8"
dependencies = [
    "qtpy>=2.4.1",
    "appdirs>=1.4.4",
    "qtawesome>=1.3.1",
]

[project.urls]
Homepage = "https://github.com/qtstrap/qtstrap"
Documentation = "https://docs.qtstrap.dev"
Repository = "https://github.com/qtstrap/qtstrap"
Issues = "https://github.com/qtstrap/qtstrap/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "PySide6>=6.7.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qtstrap"]
