[project]
name = "qtstrap"
version = "0.7.1"
description = "Like Bootstrap, but qt-er."
readme = "README.md"
authors = [{ name = "David Kincaid", email = "daelonsuzuka@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Widget Sets",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.9"
dependencies = [
    "qtpy>=2.4.1",
    "appdirs>=1.4.4",
    "qtawesome>=1.3.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "PySide6>=6.7.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "twine",
    "lazydocs",
]

[project.urls]
Homepage = "https://github.com/qtstrap/qtstrap"
Documentation = "https://docs.qtstrap.dev"
Repository = "https://github.com/qtstrap/qtstrap"
Issues = "https://github.com/qtstrap/qtstrap/issues"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
exclude = ["app/app_info.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ['F405']

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
