[metadata]
name = qtstrap
version = 0.2.9
description = Like Bootstrap, but qt-er.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/qtstrap/qtstrap
author = David Kincaid
author_email = dlkincaid0@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Topic :: Software Development :: Widget Sets
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Documentation = https://qtstrap.github.io/qtstrap/
    Source = https://github.com/qtstrap/qtstrap
    Tracker = https://github.com/qtstrap/qtstrap/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = true
install_requires =
    QtPy
    click
    inquirerpy
    appdirs
    qtawesome
    pyinstaller
python_requires = >=3.9, <3.11

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    qtstrap=qtstrap.__main__:main
